# sls-mangum-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
ddb-data/: shared-local-instance.db
exam_results/: main.py
manage_students/: main.py
sls_mangum_fastapi/: config.py  main.py
tests/: test_sls_mangum_fastapi.py
