[tool.poetry]
name = "sls_mangum_fastapi"
version = "0.1.0"
description = ""
authors = ["TatchNicolas <TatchNicolas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mangum = "^0.7.4"
fastapi = "^0.52.0"
pynamodb = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
uvicorn = "^0.11.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
